[package]
name = "seal-wasm"
version = "0.1.0"
edition = "2024"
description = "Thin wasm32 FFI shim exposing the Seal compiler to JavaScript via the raw C ABI. Zero-dependency on purpose (no wasm-bindgen): the compiler crate's no-dependency TCB stays intact; this crate does only string marshalling across the wasm boundary."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# The only dependency is the compiler itself, by path. No wasm-bindgen, no
# crates.io: this preserves the project's zero-dependency discipline (the
# TCB takes no external code; the glue takes only the TCB).
seal = { path = ".." }

# Release builds target a small .wasm (panic=abort drops unwinding; opt-level=z
# minimizes size). Debug builds (the default, used for smoke tests) are larger
# but build faster. Neither changes behaviour -- the address math is the same.
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

# Isolated from the parent: this glue crate is intentionally a separate build
# unit from the compiler crate.
[workspace]
